fix alignment of the column

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -137,6 +137,7 @@ html {
     /* 56do for last row */
     .mdt-footer, tr th{
         height: 56px;
+        line-height: 56px;
 
         .mdt-pagination{
             font-size: 12px;
